layout bugs

--- a/oith-styles/src/layout/chapter-layout.scss
+++ b/oith-styles/src/layout/chapter-layout.scss
@@ -340,7 +340,7 @@ body {
   }
 
   .oith-content-parent {
-    @media screen and (max-width: 700px) {
+    @media screen and (max-width: 500px) {
       display: grid;
       grid-template-rows: calc(100vh) 0px;
       &.large-notes {
@@ -355,13 +355,22 @@ body {
         border-top-color: #a9b2b2;
       }
     }
-    @media screen and (min-width: 700.01px) and (max-width: 991.98px) {
+    @media screen and (min-width: 500.01px) and (max-width: 991.98px) {
       display: grid;
       @include mobileNav();
       // @include oithContent(0px, 350px);
       grid-template-columns: calc(100%) 0px;
       &.large-notes {
         grid-template-columns: calc(100% - 350px) 350px;
+        .right-nav svg {
+          right: 350px;
+        }
+        @media screen and (max-width: 700px) {
+          grid-template-columns: calc(100% - 275px) 275px;
+          .right-nav svg {
+            right: 275px;
+          }
+        }
       }
       &.small-notes {
         grid-template-columns: calc(100% - 250px) 250px;
@@ -416,7 +425,7 @@ body {
     .right-nav {
       svg {
         position: fixed;
-        width: 48px;
+        width: 46px;
         height: 32px;
         top: calc(100vh / 2);
         // top: calc(100% - 350px - 48px);
